--- a/formato.css
+++ b/formato.css
@@ -103,3 +103,77 @@ border-radius:7px 7px 7px 7px ;
     padding-top: 11rem;
 }
 
+/*-----MAIN-----*/
+
+.contenido {
+    background-image: linear-gradient(to right, black 100%, #434343 0%);
+    color: white;
+    font-size: 1.5rem;
+    padding: 10px;
+    font-family: 'Abel', sans-serif;
+
+}
+
+.productosImg {
+    display:flex;
+    justify-content: center;
+    padding: 10px;
+
+}
+
+.productosImg img {
+    padding: 10px;
+    border-radius: 80px;
+}
+
+.productosTitulo {
+    padding: 10px;
+    
+}
+
+.prueba{
+    display: flex;
+    padding: 10px;
+    padding-left: 63px;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+/*-----FOOTER-----*/
+
+.footerFormulario {
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    text-align: center;
+    padding: 1rem;
+    font-family: 'Abel', sans-serif;
+
+
+}
+
+.footerFormulario ul {
+    list-style: none;
+    color: white;
+    text-align: center;
+    padding: 10px;
+
+}
+
+.footerFormulario li a {
+    color: white;
+    list-style: none;
+    text-decoration: none;
+    text-align: center;
+    padding: 15px;
+}
+
+
+
+.icon {
+    color: white;
+    padding: 10px;
+
+}
